--- a/css/style.css
+++ b/css/style.css
@@ -65,14 +65,328 @@ body {
 body {
   /*font-family: "Chivo", "Arial", sans-serif;*/
   font-family: "Poppins", "Arial", sans-serif;
-  line-height: 2;
+  line-height: 1;
 }
-.liColor,
+
 .footer {
   font-family: "PT Sans", serif;
 }
 .wrapper {
   min-height: 100%;
   overflow: hidden;
+  padding: 50px 0px 0px 50px;
 }
 /* --------------- */
+
+.block {
+  font-size: 18px;
+}
+.block h1 {
+  text-align: center;
+  font-size: 50px;
+  font-weight: 700;
+  color: #ffd700;
+  text-shadow: 1px 1px 5px #ff0000;
+  border: 12px solid #ffd700;
+  box-shadow: inset 1px 1px 50px 10px #ff0000, -1px -1px 50px 10px #ffd700;
+  border-radius: 30%;
+  padding: 10px 0px;
+  margin-bottom: 50px;
+}
+.blockBold,
+.blockOpasity,
+.blockOpasity1 {
+  width: 300px;
+  padding: 15px;
+  margin: 0px 0px 20px 0px;
+}
+
+.blockBold {
+  border: 5px solid #000;
+  background-color: #d2691e;
+  max-height: 200px;
+  overflow: auto;
+  outline: 15px solid #bd26eb;
+}
+.blockOpasity {
+  border: 15px solid rgba(0, 0, 0, 0.5);
+  background-color: #006400;
+}
+.blockOpasity1 {
+  border: 5px solid rgba(0, 0, 0, 1);
+  background-color: #006400;
+}
+.blockOpasity2 {
+  border: 50px solid rgba(0, 0, 0, 0);
+  background-color: #006400;
+  width: 300px;
+  margin: 0px 50px 20px 0px;
+}
+.blockSpanMain {
+  font-size: 0;
+}
+.blockSpan {
+  font-size: 18px;
+  line-height: 2;
+  background-color: #e9967a;
+  border: 4px dashed #3a26eb;
+}
+.blockSpan1 {
+  font-size: 20px;
+  background-color: #dc143c;
+  display: inline-block;
+  border: 10px dotted #26eb40;
+  max-width: 300px;
+  max-height: 200px;
+  padding: 20px;
+  overflow: auto;
+  margin: 0px 0px 20px 0px;
+}
+.blockSpanMain > span {
+  border-top: 15px double #060008;
+}
+.blockLine {
+  border: 15px dashed #a0845f;
+  outline: 5px dashed #5f9ea0;
+  border-radius: 10%;
+  margin-bottom: 50px;
+}
+.blockLine p {
+  background-color: #5f9ea0;
+  display: inline-block;
+  max-width: 200px;
+  margin: 0px 30px 30px 0px;
+}
+
+.blocklinedouble {
+  font-size: 16px;
+  padding: 15px 10px 20px 20px;
+  max-width: 250px;
+  max-height: 300px;
+  overflow: auto;
+  border: 10px double #ffd700;
+}
+.blocklinedouble a {
+  display: inline-block;
+  color: #ffd700;
+  border-bottom: 2px dotted;
+}
+.blocklinesolid {
+  padding: 0px 10px 0px 10px;
+  border: 15px solid #3a26eb;
+}
+.blocklinesolid span {
+  border: 2px solid #3a26eb;
+}
+.blocklinedashed {
+  padding: 20px 0px 20px 0px;
+  border-right: 15px dashed #26eb40;
+  border-left: 15px dashed #26eb40;
+}
+.blocklinedashed a {
+  color: #26eb40;
+  border-top: 5px dashed;
+}
+.blocklinedotte {
+  border: 30px dotted #bd26eb;
+  outline: 30px dotted #bd26eb;
+}
+
+.transparent {
+  background-color: #9acd32;
+  max-width: 200px;
+  margin: 0 auto;
+  border: 20px solid transparent;
+  outline: transparent;
+  border-radius: 50%;
+  overflow: auto;
+  margin-bottom: 30px;
+}
+.transparentSpan {
+  background-color: #ff6347;
+  border: 20px solid transparent;
+  border-radius: 10%;
+}
+.image {
+}
+.fox,
+.mushroom,
+.squirrel,
+.blackSquirrel {
+  display: inline-block;
+}
+
+.fox {
+  border: 15px solid #d2691e;
+  border-radius: 40%;
+  box-shadow: 1px 1px 10px 10px #949950;
+}
+.mushroom {
+  display: block;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0px auto;
+  box-shadow: 5px 5px 50px 50px #ffd700, -5px -5px 50px 50px #ff0000, -10px -50px 10px 50px #060008,
+    5px 5px 50px 50px #ff0000, 10px 50px 10px 50px #060008;
+}
+.squirrel {
+  border-radius: 61% 39% 100% 0% / 18% 11% 89% 82%;
+  box-shadow: 1px 2px 2px 2px #1e72d2, -1px -2px 2px 2px #9acd32;
+  margin-bottom: 30px;
+}
+.blackSquirrel {
+  display: block;
+  outline: 15px dotted #4b4743;
+  box-shadow: 5px 5px 15px 5px #4b4743;
+  margin-right: 50px;
+  margin-bottom: 50px;
+}
+.border {
+  max-width: 300px;
+  max-height: 300px;
+  margin: 0 auto;
+  padding: 15px 15px 15px 15px;
+  overflow: auto;
+  background-color: #e9967a;
+  border: 4px solid #ffd700;
+  border-top: none;
+  margin-bottom: 50px;
+}
+.paragraph {
+  font-size: 0;
+  width: 900px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+.paragraphText1 {
+  display: inline-block;
+  max-width: 200px;
+  font-size: 18px;
+  margin-right: 20px;
+  background-color: #ffebcd;
+  border: 5px solid #bd26eb;
+  border-right: 15px dashed #26eb26;
+  border-bottom: 10px double #eb9626;
+  border-left: 20px dotted #26d4eb;
+  box-shadow: 2px 1px 5px 2px #bd26eb, 1px 2px 5px 4px #26eb26, 2px 2px 10px 5px #eb9626, 3px 3px 10px 5px #26d4eb;
+}
+.paragraphText2 {
+  display: inline-block;
+  max-width: 200px;
+  font-size: 18px;
+  margin-right: 20px;
+  opacity: 0;
+}
+.paragraphText2 a {
+  color: #006400;
+}
+.paragraphText3 {
+  display: inline-block;
+  max-width: 200px;
+  font-size: 18px;
+  margin-right: 20px;
+  opacity: 0;
+  visibility: hidden;
+}
+.paragraphText4 {
+  display: inline-block;
+  max-width: 200px;
+  max-height: 200px;
+  font-size: 18px;
+  margin-right: 20px;
+  background-color: #00ced1;
+  overflow: auto;
+  border-radius: 50%;
+  opacity: 0.1;
+  /*opacity: 0.2;
+    opacity: 0.3;
+    opacity: 0.4;
+    opacity: 0.5;
+    opacity: 0.6;
+    opacity: 0.7;
+    opacity: 0.8;
+    opacity: 0.9;
+    opacity: 1;*/
+}
+
+.Text1,
+.Text2,
+.Text3,
+.Text4 {
+  display: inline-block;
+  max-width: 200px;
+  max-width: 200px;
+  padding: 30px;
+  margin: 0px 50px 20px 0px;
+  background-color: rgb(255, 0, 140);
+}
+
+.Text {
+  border: 10px dotted #2114dc;
+  border-radius: 50% 100%;
+  outline: 20px double #14dc14;
+  margin-bottom: 50px;
+}
+.Text1 {
+  border-radius: 10% 20% 30% 40%;
+}
+.Text2 {
+  border-radius: 40% 120% 60% 0%;
+}
+.Text3 {
+  border-radius: 100% 200%;
+}
+.Text4 {
+  border-radius: 200% 100%;
+}
+.fls {
+  font-family: "PT Sans", sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  color: #ffd700;
+  text-shadow: 1px 1px 5px #ff0000;
+  text-align: center;
+}
+.circle {
+  max-width: 200px;
+  max-height: 200px;
+  background-color: #ffd700;
+  border-radius: 50%;
+  overflow: auto;
+  padding: 30px;
+  margin-bottom: 50px;
+}
+.opacity {
+  background-color: #ff0000;
+  opacity: 0.5;
+  margin-bottom: 20px;
+}
+.spanSpan {
+  display: block;
+  border: 5px solid #bd26eb;
+  margin-bottom: 20px;
+}
+.different {
+  max-width: 300px;
+  max-height: 300px;
+  background-color: #ffd700;
+  border: 5px dashed #ff0000;
+  border-right: 25px dotted #6e8642;
+  border-bottom: 15px double #0dd2f5;
+  border-left: 10px solid #ae32cd;
+  margin: 0px 0px 20px 0px;
+}
+.link {
+  display: inline-block;
+  font-size: 30px;
+  color: #ff0000;
+  border-bottom: 5px dotted;
+  box-shadow: inset 2px 2px 5px 10px #ffd700, 2px 2px 5px 10px #ffd700;
+  margin-bottom: 20px;
+}
+footer div a {
+  color: #d84e25;
+  border-radius: 10%;
+  outline: 1px solid #2114dc;
+}
